--- a/app/views/events/create.html.erb
+++ b/app/views/events/create.html.erb
@@ -1,2 +1,13 @@
-<h1>Events#create</h1>
-<p>Find me in app/views/events/create.html.erb</p>
+<h4>
+  The finer details
+</h4>
+
+<div = "container" >
+
+  1.) Create Food list
+
+  2.) Create Item List
+
+  3.) Assign Duties
+
+</div>
