Add another item added

--- a/app/views/events/create.html.erb
+++ b/app/views/events/create.html.erb
@@ -10,6 +10,7 @@
   			<%= f.number_field :amount, :placeholder => "# needed" %>
   			<%= f.number_field :price, :placeholder => "$$" %>
   		<% end %>
+  		<%= link_to "Add another", "#" %>
   	</div>
 
   2.) Create Item List
