--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,7 +11,22 @@
 						<li><%= e.text_field :location ,:placeholder => "Where will be?"%></li>
 						<li><%= e.date_select :date , :discard_year => true ,:use_short_month => true %></li>
 						<li><%= e.time_select :time , :minute_step => 30 %></li>
-						<li><%= e.submit "Create Event", :class => 'btn btn-large btn-info'%></li>
+
+						<div id	= "create-slider" >
+							<%= link_to "Create Event" , "#", :id => "slider",:class => 'btn btn-large btn-info' %>
+						</div>
+
+						<div id	= "new-slider" >
+							<li><%= e.text_field :name, :placeholder => "What's your email?" %> <%= e.submit "Go!", :class => 'btn btn-large btn-info'%></li>
 					</ol>
-				<% end %>			
+				<% end %>	
+		</div>
+
+		<script>
+			$('#slider').click(function() {
+				$('#new-slider').slideDown('slow');
+				$('#create-slider').slideUp('slow');
+				console.log('click slider');
+			});
+		</script>
 </div>
