Food save, add another next

--- a/app/views/events/create.html.erb
+++ b/app/views/events/create.html.erb
@@ -5,7 +5,7 @@
 <div = "container" >
 	<h4><%=link_to "Step One - Create Food list","#", :id => "food_slider" %></h4>
 		<div id = "food_form">
-  		<%= form_for @food do |f| %>
+  		<%= form_for @food, :url => { :action => "create_food" } do |f| %>
   			<%= f.text_field :name, :placeholder => "Food name" %>
   			<%= f.number_field :amount, :placeholder => "# needed" %>
   			<%= f.number_field :price, :placeholder => "$$" %>
