--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,10 +7,11 @@
 		<h1>Get Started</h1>
 				<%= form_for @event do |e| %>
 					<ol>
+						
 						<li><%= e.text_field :name ,:placeholder => "Event Name"%></li>
 						<li><%= e.text_field :location ,:placeholder => "Where will be?"%></li>
+						<li><%= e.date_select :date , :discard_year => true ,:use_short_month => true %></li>
 						<li><%= e.number_field :time , :minute_step => 30, :placeholder => "What time will it start?" %></li>
-						<li><%= e.time_select :time , :minute_step => 30 %></li>
 
 						<div id	= "create-slider" >
 							<%= link_to "Create Event" , "#", :id => "slider",:class => 'btn btn-large btn-info' %>
