--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 				<div class = "center hero-unit">
 					<h1>Event Pal</h1>
 				</div>
+					<p class="notice"><%= notice %></p>
+       		<p class="alert"><%= alert %></p>
 					<%= yield %>
 				</div>
 			</div>
