--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,17 @@
 				<div class = "center hero-unit">
 					<h1>Event Pal</h1>
 				</div>
-					<p class="notice"><%= notice %></p>
-       		<p class="alert"><%= alert %></p>
+				<div id = "user_nav">						
+							<% if user_signed_in? %>
+								Signed in as <%= current_user.email %>, Not you?
+								<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+							<% else %>
+								<%= link_to "Sign up", new_user_registration_path %>
+							<% end %>
+
+				</div>
+					<!-- <p class="notice"><%= notice %></p> -->
+       		<!-- <p class="alert"><%= alert %></p> -->
 					<%= yield %>
 				</div>
 			</div>
