--- a/app/views/confirmations/show.html.erb
+++ b/app/views/confirmations/show.html.erb
@@ -1,2 +1,24 @@
-<h1>Confirmations#show</h1>
-<p>Find me in app/views/confirmations/show.html.erb</p>
+<h2>You're almost done!</h2>
+<h3>now just create a password to securely access your account</h3>
+
+<%= form_for(resource, :as => resource_name, :url => confirm_path) do |f| %>
+  <%= devise_error_messages! %>
+
+  <div>
+  	<%= f.label :password %><br />
+  	<%= f.password_field :password %>
+  </div>
+
+  <div>
+  	<%= f.label :password_confirmation %><br />
+  	<%= f.password_field :password_confirmation %>
+  	<%= f.hidden_field :confirmation_token %>
+  </div>
+
+  <div>
+  	<%= f.submit "Confirm Account" %>
+  </div>
+
+<% end %>
+
+<%= render "links" %>
