Sign Up under jQuery

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -24,7 +24,7 @@
 							  <div>
 							  	<%= f.email_field :email , :placeholder => "you_email@email.com"%>
 								</div>
-							  <div><%= f.submit "Sign up" %></div>
+							  <div><%= f.submit "Sign up & Create Event", :class => 'btn btn-large btn-info' %></div>
 							<% end %>
 					</ol>
 				
